# genrepass

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build-releases.sh  build.rs
.github/workflows/: release.yml
benches/: marks.rs
examples/egui-app/: Cargo.toml
examples/egui-app/src/: main.rs
examples/egui_app/: Cargo.toml
examples/egui_app/src/: main.rs
src/: helpers.rs  lexicon.rs  lib.rs  main.rs  password.rs  settings.rs
