[package]
name = "genrepass"
version = "1.0.1"
authors = ["Alexander Chaplin Braz <contact@alexchaplinbraz.com>"]
description = """Generate a readable password from an ordered list of words extracted from text.
For improved security, numbers and special characters are inserted at random places."""
homepage = "https://github.com/AlexChaplinBraz/genrepass"
repository = "https://github.com/AlexChaplinBraz/genrepass"
readme = "README.md"
license = "MIT"
edition = "2018"
keywords = ["generate", "readable", "secure", "password", "text", ]
categories = ["command-line-utilities"]
exclude = ["/releases"]

[dependencies]
deunicode = "1.1"
rand = "0.7"
regex = "1.4"
snafu = "0.6"
copypasta-ext = "0.3"
clap = "2.33"
