[package]
name = "genrepass"
version = "1.1.4"
authors = ["Alexander Chaplin Braz <contact@alexchaplinbraz.com>"]
description = """Library for generating a readable password from an ordered list
of words extracted from text. For improved security,
numbers and special characters are inserted at random places."""
homepage = "https://github.com/AlexChaplinBraz/genrepass"
repository = "https://github.com/AlexChaplinBraz/genrepass"
readme = "README.md"
license = "MIT"
edition = "2021"
keywords = ["generate", "readable", "secure", "password", "text"]
categories = ["authentication"]

[dependencies]
deunicode = "1.1.1"
rand = "0.8"
rayon = { version = "1.5", optional = true }
regex = "1.4"
serde = { version = "1.0", features = ["derive"], optional = true }
snafu = "0.7"

[build-dependencies]
rustc_version = "0.4"

[dev-dependencies]
brunch = "0.3"

[[bench]]
name = "marks"
harness = false

[package.metadata.docs.rs]
all-features = true
