[package]
name = "egui-app"
version = "0.1.0"
authors = ["Alexander Chaplin Braz <contact@alexchaplinbraz.com>"]
license = "MIT"
edition = "2021"
publish = false

[dependencies]
copypasta-ext = "0.3"
eframe = { version = "0.19", features = ["persistence"] }
genrepass = { path = "../../", features = ["rayon", "serde"] }
rfd = "0.10"
serde = { version = "1.0", features = ["derive"] }
